libs/pavex_cli/tests/ui_tests/tuple_input_parameters_are_not_handled/expectations/stderr.txt
Error: 
  × One of the input parameters for `app::stream_file` has a type that I
  │ cannot handle.
   ╭─[src/lib.rs:7:1]
 7 │ pub fn blueprint() -> AppBlueprint {
 8 │     AppBlueprint::new().route(f!(crate::stream_file), "/home")
   ·                               ───────────┬──────────
   ·                                          ╰── The callable was registered here
 9 │ }
   ╰────

Error: 
  × 
   ╭─[src/lib.rs:2:1]
 2 │ 
 3 │ pub fn stream_file(input: (usize, isize)) -> http::Response<hyper::body::Body> {
   ·                           ───────┬──────
   ·                                  ╰── The parameter type that I cannot handle
 4 │     todo!()
   ╰────